--- a/CSS/weather_map.css
+++ b/CSS/weather_map.css
@@ -1,36 +1,25 @@
-
+body{
+    background-color: #f3f3f3;
+}
 #weatherHeader{
-    background-color: #2f746d;
+    background-color: #8f8f90;
     position: relative;
-    height:3rem;
+    height:100%;
     text-align: center;
+    color:white;
 }
-#insertCurrent{
-    margin:10px;
-    padding:10px;
-    background-color: rgba(203, 119, 130, 0.82);
-    color: white;
-    display:flex;
-}
-#currentCard{
-    align-items: center;
-}
-#insertWeather{
-    display:flex;
-    justify-content: space-evenly;
-    margin:5px;
-}
-#dateTimeCards{
-    margin:5px;
-    padding: 5px;
-    border: 5px solid #2f746d;
-    background-color: rgba(139, 201, 193, 0.37);
+#mapBackground{
+    background-color: #cb8990;
+    border-radius: 30px;
+    box-shadow: 2px 2px 4px black;
+    border: 5px solid #65334D;
 }
 #searchBar{
-    background-color: #2f746d;
+    background-color: #8f8f90;
     text-align: center;
     color: white;
-    margin-bottom:15px;
+    margin-top:10px;
+    border-radius: 30px;
 }
 #address-input{
     margin-top: 10px;
@@ -45,28 +34,99 @@
     width:100%;
     height: 500px;
     position:relative;
+    z-index: 2;
+    margin-top:20px;
+    margin-bottom:5px;
+    border-radius: 30px;
+}
+#insertCurrent{
+    margin:10px;
+    padding:10px;
+    background-color: rgba(203, 119, 130, 0.82);
+    color: white;
+    display:flex;
+    box-shadow: 2px 2px 4px black;
+    border-radius: 30px;
+    border: 5px solid #65334D;
+}
+#insertIcon{
+    background-color: rgba(203, 119, 130, 0.82);
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin:10px;
+    box-shadow: 2px 2px 4px black;
+    border: 5px solid #65334D;
+}
+#mainIcon{
+    height: 200px;
+    width: 200px;
+}
+#currentCard{
+    align-items: center;
+    text-align: center;
+    margin:10px;
+    padding:10px;
+}
+#currentWeather{
+    color:white;
+    align-items: center;
+    text-align: center;
+}
+#thermometer{
+    margin:10px;
+}
+#insertWeather{
+    display:flex;
+    justify-content: space-between;
+    margin:5px;
+}
+#insertWeatherContainer{
+    background-color: #8f8f90;
+    margin-top: 20px;
+}
+#dateTimeCards{
+    margin:5px;
+    padding: 5px;
+    /*border: 5px solid #2f746d;*/
+    /*background-color: rgba(139, 201, 193, 0.37);*/
+    background-color: #cb8990;
+    box-shadow: 2px 2px 4px black;
+    border-radius: 30px;
+    color: white;
+    text-align: center;
+    border: 5px solid #65334D;
 }
 .coordinates {
     background: rgba(203, 119, 130, 0.79);
     color: #fff;
     position: absolute;
-    bottom: 75px;
-    left: 10px;
+    bottom:50px;
+    left: 50px;
     padding: 5px 10px;
     margin: 0;
     font-size: 11px;
     display: none;
+    z-index:5;
 }
 
-#footer {
-    background-color: rgba(47, 116, 109, 0.92);
-    color:white;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 2rem;
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    padding-top:10px;
+/*#footer {*/
+/*    background-color: rgba(47, 116, 109, 0.92);*/
+/*    color:white;*/
+/*    position: fixed;*/
+/*    bottom: 0;*/
+/*    width: 100%;*/
+/*    height: 2rem;*/
+/*    display: flex;*/
+/*    justify-content:center;*/
+/*    align-items: center;*/
+/*    padding-top:10px;*/
+/*    z-index: 10;*/
+/*}*/
+b{
+    font-family: "Ubuntu", sans-serif;
+}
+p{
+    font-family: "Nanum Gothic", sans-serif;
 }
